SERVER-78554 PinnedConnectionTaskExecutor destroys unhealthy stream before notifying of command comletion

(cherry picked from commit b33a9c90e78ae15c7d27f0d57acad1bb04fc7bff)